# Python-CI-Base

./: .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: build_docs.yml  check_and_deploy.yml  py_lint_test.yml
docs/source/: conf.py  index.rst
scripts/: doc.sh  lint_test.sh
